--- a/styles.css
+++ b/styles.css
@@ -334,3 +334,22 @@ th {
         overflow-x: auto;
     }
 }
+
+.d-none {
+    display: none;
+}
+
+.spinner-border {
+    width: 2rem;
+    height: 2rem;
+    border: 0.25em solid currentColor;
+    border-right-color: transparent;
+    border-radius: 50%;
+    animation: spinner-border 0.75s linear infinite;
+}
+
+@keyframes spinner-border {
+    to {
+        transform: rotate(360deg);
+    }
+}
